--- a/oceantech/oceantech/package.json
+++ b/oceantech/oceantech/package.json
@@ -19,6 +19,7 @@
     "@mui/lab": "^5.0.0-alpha.112",
     "@mui/material": "^5.11.0",
     "@mui/styles": "^5.11.0",
+    "antd": "^5.4.2",
     "axios": "^1.2.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "core-js": "^3.26.1",
